# Rust_Decathlon

./: README.md
Wheater_Forecast/: .env  Cargo.toml
Wheater_Forecast/src/: main.rs
weather_forecast/: Cargo.toml
weather_forecast/src/: forecast.rs  main.rs
weather_forecast/src/controller/: mod.rs
weather_forecast/src/forecast/: mod.rs
weather_forecast/src/model/: mod.rs
weather_forecast/src/view/: mod.rs
