[package]
name = "weather_forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1.24.1", features = ["full"] }
dotenv = "0.15.0"
serde_json = "1.0.91"
chrono = "0.4.23"
